--- a/HTML CSS/Tribute-Page/style.css
+++ b/HTML CSS/Tribute-Page/style.css
@@ -1,4 +1,32 @@
 body {
   background-color: black;
-  color: aliceblue;
+  color: white;
+  font-size: larger;
+}
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+.centered-content {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+}
+p {
+  padding: 3%;
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+a:link {
+  color: rgb(134, 199, 249);
+  text-decoration: none;
+}
+a:visited {
+  color: rgb(134, 199, 249);
+}
+a:hover {
+  color: rgb(150, 250, 255);
 }
