--- a/HTML CSS/micro-components/OutlineButton/style.css
+++ b/HTML CSS/micro-components/OutlineButton/style.css
@@ -1,17 +1,15 @@
-#button-container {
+body {
   margin: auto;
   text-align: center;
-  height: 100%;
   padding: 20%;
 }
-#button {
+button {
+  color: red;
+  border-color: rgb(255, 8, 8);
   background-color: transparent;
-  border-color: rgb(54, 125, 57);
-  color: #4caf50;
-  font-size: large;
-  padding: 1%;
+  font-size: larger;
 }
-#button:hover {
-  background-color: #4caf50;
+button:hover {
+  background-color: red;
   color: white;
 }
