--- a/HTML CSS/Form/style.css
+++ b/HTML CSS/Form/style.css
@@ -9,19 +9,13 @@ form {
   margin: auto;
   margin-top: 10%;
   padding: 4%;
+  margin-bottom: 0%;
   background-color: rgb(51, 51, 158);
   width: 50vw;
   opacity: 90%;
   color: white;
   border-radius: 9px;
 }
-/* input {
-  width: 98%;
-  height: 3vw;
-  border-radius: 9px;
-  margin-top: 5px;
-  outline: none;
-} */
 
 #submit-button {
   background-color: #37af65;
