--- a/HTML CSS/Video Background Site/style.css
+++ b/HTML CSS/Video Background Site/style.css
@@ -1,8 +1,16 @@
 body {
   margin: 0%;
+  background-color: rgb(54, 70, 70);
 }
 video {
-  object-fit: cover;
   width: 100vw;
   height: 100vh;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+}
+section {
+  padding: 3%;
+  font-size: larger;
+  color: aliceblue;
 }
