fixed header, logo

--- a/HTML CSS/Google Homepage/style.css
+++ b/HTML CSS/Google Homepage/style.css
@@ -1,17 +1,47 @@
-#nav-bar li {
-  display: inline-block;
-  margin: 0 7px;
+nav {
+  display: block;
+  float: right;
 }
+nav input {
+  padding: 5px;
+}
+nav a {
+  padding: 5px;
+}
+/* nav a.hover {}nav a.hover {}nav a.hover {}nav a.hover {} */
 #logo {
   margin: auto;
+  padding-top: 20vh;
+  height: 17vh;
+  width: 25vw;
 }
-#logo image {
-  height: 10%;
-  width: 20%;
+#logo img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 100%;
 }
+
+#search-bar  {
+  margin: auto;
+  height: 5vh;
+  width: 42vw;
+}
+
 #search-bar input {
-    border-radius: 10px;
-    border-color: rgb(161, 164, 167);
-    outline: none;
-    width: 40%;
+  border-radius: 15px;
+  border-color: rgb(161, 164, 167);
+  outline: none;
+  width: 100%;
+  height: 100%;}
+#buttons{
+  margin: auto;
+  margin-bottom: 0%;
+  position: fixed;
+}
+#buttons{
+  margin-left: auto;
+  margin-right: auto;
+  
 }
