--- a/HTML CSS/Google Homepage/style.css
+++ b/HTML CSS/Google Homepage/style.css
@@ -15,7 +15,7 @@ nav a {
   height: 17vh;
   width: 25vw;
 }
-#logo img{
+#logo img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -23,10 +23,10 @@ nav a {
   height: 100%;
 }
 
-#search-bar  {
+#search-bar {
   margin: auto;
-  height: 5vh;
-  width: 42vw;
+  height: 6vh;
+  width: 44vw;
 }
 
 #search-bar input {
@@ -34,14 +34,36 @@ nav a {
   border-color: rgb(161, 164, 167);
   outline: none;
   width: 100%;
-  height: 100%;}
-#buttons{
-  margin: auto;
-  margin-bottom: 0%;
-  position: fixed;
+  height: 100%;
+  border-width: 1px;
+  border-color: #a0a1a1;
 }
-#buttons{
-  margin-left: auto;
-  margin-right: auto;
-  
+#search-bar input:hover {
+  border-width: 1.5px;
+}
+#buttons {
+  margin: auto;
+  text-align: center;
+}
+.search-button {
+  margin-top: 10px;
+  margin-right: 7px;
+  padding: 7px;
+  border-radius: 2px;
+  border-width: 1px;
+  background-color: #f8f9fa;
+  border-color: #f8f9fa;
+}
+.search-button:hover {
+  border-color: #a0a1a1;
+}
+footer {
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  padding: 10px;
+  padding-left: 2%;
+  padding-right: 2%;
+  background-color: #f2f2f2;
+  position: fixed;
 }
